feat: Add comment endpoints and enhance Post Service
- Add POST/GET/DELETE endpoints for comments in PostController
- Update getPostList to support sortBy and tag parameters
- Implement Redis caching for posts and post lists
- Add content validation (500 chars for posts, 200 for comments)
- Implement atomic counter updates for likes and comments
- Add author info (name, avatar) to PostVO and PostCommentVO
- Implement soft delete with cascade to comments